chore: update environment variables and enhance spell check configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["godotenv", "hedera", "Hiero", "mpesa", "offramp"]
+  "cSpell.words": [
+    "godotenv",
+    "hedera",
+    "Hiero",
+    "mpesa",
+    "offramp",
+    "USDCKSH",
+    "USDKSH"
+  ]
 }
