chore: update production Docker Compose configuration to use environment variables for authorization URL and business short code

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,8 +48,8 @@ services:
       CONSUMER_SECRET: ${CONSUMER_SECRET}
       PASS_KEY: ${PASS_KEY}
       STK_PUSH_URL: ${STK_PUSH_URL}
-      AUTHORIZATION_URL: ${AUTHORIZATION_URL_LIVE}
-      BUSINESS_SHORT_CODE: ${BUSINESS_SHORT_CODE_PROD}
+      AUTHORIZATION_URL: ${AUTHORIZATION_URL}
+      BUSINESS_SHORT_CODE: ${BUSINESS_SHORT_CODE}
       CALLBACK_URL: ${CALLBACK_URL}
     depends_on:
       db:
